...
          String? noticeId,
          String? androidTvNoticeId,
          bool androidTvEnabled = false,
          String? countryCode,
          String? regionCode,
          bool isUnderage = false}) async =>
      await _channel.invokeMethod("initialize", {
        "apiKey": apiKey,
        "localConfigurationPath": localConfigurationPath,
        "remoteConfigurationURL": remoteConfigurationURL,
        "providerId": providerId,
        "disableDidomiRemoteConfig": disableDidomiRemoteConfig,
        "languageCode": languageCode ?? Platform.localeName,
...
  static Future<void> initializeWithParameters(DidomiInitializeParameters didomiInitializeParameters) async =>
      await _channel.invokeMethod("initializeWithParameters", {
        "jsonDidomiInitializeParameters": didomiInitializeParameters.toJson(),
      });

  /// Check if Didomi SDK was successfully initialized
  static Future<bool> get isReady async => await _channel.invokeMethod('isReady');

  /// Check if user consent are partial or not set
  @Deprecated("Use 'shouldUserStatusBeCollected' instead")
  static Future<bool> get shouldConsentBeCollected async {
    final bool result = await _channel.invokeMethod('shouldConsentBeCollected');
    return result;
...
  static Future<void> reset() async {
    await _channel.invokeMethod('reset');
  }

  /// Setup the UI and show the notice if needed
  static Future<void> setupUI() async {
    await _channel.invokeMethod('setupUI');
  }

  /// Show the notice screen if user consent is needed.
  /// Note: When calling from iOS, setupUI must have been called before.
  static Future<void> showNotice() async {
    await _channel.invokeMethod("showNotice");
...
  }

  /// Provide a function to be called once SDK is ready.
  /// Automatically calls the function if SDK is already ready.
  static onReady(Function() callback) {
    _eventsHandler.onReadyCallbacks.add(callback);
    _channel.invokeMethod('onReady');
  }

  /// Provide a function to be called if SDK encounters an error
  static onError(Function() callback) {
    _eventsHandler.onErrorCallbacks.add(callback);
    _channel.invokeMethod('onError');
...
